--- a/4-experiments/experiment6/experiment5_dataset_nih_binv1.0.ipynb
+++ b/4-experiments/experiment6/experiment5_dataset_nih_binv1.0.ipynb
@@ -8,8 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -20,16 +19,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Alyssonmach/cnn-lung-diseases/blob/main/4-experiments/experiment6/experiment5_dataset_nih_binv1.0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -77,7 +66,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -102,7 +91,7 @@
         "validation_df = pd.read_csv('/content/drive/MyDrive/validation_df.csv', sep = ',', index_col=  0)\n",
         "test_df = pd.read_csv('/content/drive/MyDrive/test_df.csv' , sep = ',', index_col=  0)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -121,7 +110,7 @@
         "test_df.loc[test_df.labels == 1, 'labels'] = 'abnormal'\n",
         "test_df.loc[test_df.labels == 0, 'labels'] = 'normal'"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -137,7 +126,7 @@
         "train = np.concatenate((train_normal_cases, train_abnormal_cases))\n",
         "train_df = pd.DataFrame(train, columns = ['Image Index', 'finding_labels', 'labels'])"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -148,13 +137,13 @@
           "height": 204
         },
         "id": "a9uNHRrS4Uin",
-        "outputId": "8b95fc90-e129-40d0-b2a2-4186ddc435c4"
+        "outputId": "8532ab4a-feb9-4bcb-ffa1-ca16d2ecb8f7"
       },
       "source": [
         "# visualizando como é a organização do dataframe pré-processado\n",
         "train_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,13 +230,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9QGd53xcdiiY",
-        "outputId": "4113ab5a-d3a5-4742-cd03-e741e7f3d533"
+        "outputId": "4e15eb24-3dd7-4983-85c0-aa26d9285b74"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
         "train_df['labels'].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,17 +265,17 @@
         "                                                  train_df['labels'])\n",
         "class_weight = {0: class_weights[0], 1: class_weights[1]}"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "background_save": true
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Nikcd9Fj4tpv",
-        "outputId": "eab5b35f-1e62-4f18-ba6b-40e656c24900"
+        "outputId": "e44185d0-72ad-446f-ce17-f246215f2d8c"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -328,7 +317,7 @@
         "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,16 +334,16 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "background_save": true
+          "base_uri": "https://localhost:8080/"
         },
         "id": "s37H75lFDbZ_",
-        "outputId": "34b12aa2-3f60-4ac1-bc91-8a996fec1857"
+        "outputId": "73c59f5b-7bd2-4a6c-fbd0-7d6f0fca4cbd"
       },
       "source": [
         "# visualizando a ordem numérica das classes nos dados de treinamento\n",
         "train_generator.class_indices"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +355,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 0
+          "execution_count": 11
         }
       ]
     },
@@ -383,10 +372,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "background_save": true
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Tp0U2-Ut5Xvq",
-        "outputId": "77fbb693-4e90-49c1-d9e6-887f26f0b9dd"
+        "outputId": "32da2666-374e-4ba9-d906-32a95cf9e793"
       },
       "source": [
         "# baixando os pesos treinados da rede inception\n",
@@ -394,21 +383,21 @@
         "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
         "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-04-14 00:15:28--  https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.195.128, 74.125.20.128, 74.125.142.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.195.128|:443... connected.\n",
+            "--2021-04-14 13:43:58--  https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 172.217.218.128, 173.194.79.128, 108.177.119.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|172.217.218.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 87910968 (84M) [application/x-hdf]\n",
             "Saving to: ‘/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5’\n",
             "\n",
-            "/tmp/inception_v3_w 100%[===================>]  83.84M   189MB/s    in 0.4s    \n",
+            "/tmp/inception_v3_w 100%[===================>]  83.84M  65.4MB/s    in 1.3s    \n",
             "\n",
-            "2021-04-14 00:15:29 (189 MB/s) - ‘/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5’ saved [87910968/87910968]\n",
+            "2021-04-14 13:44:00 (65.4 MB/s) - ‘/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5’ saved [87910968/87910968]\n",
             "\n"
           ],
           "name": "stdout"
@@ -418,9 +407,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "ZxH8IPA15bIi"
       },
       "source": [
@@ -450,7 +436,7 @@
         "last_layer = pre_trained_model.get_layer('mixed7')\n",
         "last_output = last_layer.output"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -491,7 +477,7 @@
         "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +489,7 @@
         "# definindo um array de callbacks\n",
         "callbacks = [checkpoint]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +508,7 @@
         "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
         "                              use_multiprocessing = True, workers = 8)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,9 +588,10 @@
         "outputId": "f24b1518-f1dd-4f78-88fe-801c849da192"
       },
       "source": [
+        "# avaliando a capacidade de predição do modelo com os dados de teste\n",
         "model.evaluate(test_generator)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,14 +624,98 @@
         "outputId": "f354a117-e5e4-49a2-ee35-b6b914ff4c3f"
       },
       "source": [
+        "# salvando o modelo treinado\n",
         "model.save('/content/drive/MyDrive/weights-nih/inception/model_binv1.0')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "INFO:tensorflow:Assets written to: /content/drive/MyDrive/weights-nih/inception/model_binv1.0/assets\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3-DCFpQfBjEA"
+      },
+      "source": [
+        "### Continuação do Treinamento"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RsaI8KuZl6Mv"
+      },
+      "source": [
+        "# carregando o modelo salvo\n",
+        "model = tf.keras.models.load_model('/content/drive/MyDrive/weights-nih/inception/model_binv1.0')\n",
+        "# carregando os pesos treinados com o modelo\n",
+        "model.load_weights('/content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.1.hdf5')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HpDaKu_-BXWw",
+        "outputId": "2b54ff18-3524-4b34-a9d5-c7bc3418f63d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# definindo o caminho pelo qual os pesos serão armazenados \n",
+        "filepath = \"/content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.1.hdf5\"\n",
+        "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+        "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')\n",
+        "# definindo um array de callbacks\n",
+        "callbacks = [checkpoint]\n",
+        "\n",
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 53263 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 8)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.5733 - acc: 0.6976 WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 2735s 13s/step - loss: 0.5733 - acc: 0.6976 - val_loss: 0.6373 - val_acc: 0.6731\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.67306, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.1.hdf5\n",
+            "Epoch 2/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.5571 - acc: 0.7093WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 1081s 5s/step - loss: 0.5571 - acc: 0.7093 - val_loss: 0.6199 - val_acc: 0.6861\n",
+            "\n",
+            "Epoch 00002: val_acc improved from 0.67306 to 0.68608, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.1.hdf5\n",
+            "Epoch 3/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.5465 - acc: 0.7152WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 1037s 5s/step - loss: 0.5465 - acc: 0.7152 - val_loss: 0.7220 - val_acc: 0.6480\n",
+            "\n",
+            "Epoch 00003: val_acc did not improve from 0.68608\n",
+            "Epoch 4/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.5386 - acc: 0.7212WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 659s 3s/step - loss: 0.5386 - acc: 0.7212 - val_loss: 0.6289 - val_acc: 0.6939\n",
+            "\n",
+            "Epoch 00004: val_acc improved from 0.68608 to 0.69389, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.1.hdf5\n",
+            "Epoch 5/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.5304 - acc: 0.7288WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n"
           ],
           "name": "stdout"
         }
