--- a/4-experiments/experiment6/experiment5_dataset_nih_binv1.0.ipynb
+++ b/4-experiments/experiment6/experiment5_dataset_nih_binv1.0.ipynb
@@ -137,13 +137,13 @@
           "height": 204
         },
         "id": "a9uNHRrS4Uin",
-        "outputId": "84a4538c-7908-4cca-da45-773385bd76b5"
+        "outputId": "bf82996c-ee79-4541-a639-630a580f20a1"
       },
       "source": [
         "# visualizando como é a organização do dataframe pré-processado\n",
         "train_df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -230,13 +230,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9QGd53xcdiiY",
-        "outputId": "5263b7fd-0826-4576-b014-ab009c2080e7"
+        "outputId": "b050e4c0-b085-47d6-a975-fedbdd378b6e"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
         "train_df['labels'].value_counts()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,7 +250,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -265,7 +265,7 @@
         "                                                  train_df['labels'])\n",
         "class_weight = {0: class_weights[0], 1: class_weights[1]}"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nikcd9Fj4tpv",
-        "outputId": "2760807e-2987-4881-e65f-4a374dd01179"
+        "outputId": "4eb56cd6-37e9-4c82-8c34-4ca6e85ee4f2"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -317,7 +317,7 @@
         "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,13 +337,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s37H75lFDbZ_",
-        "outputId": "be131bfa-154d-4f52-e0a5-5aa5767591f0"
+        "outputId": "e01f486d-7c7a-4b6c-b0f4-d656308c62ed"
       },
       "source": [
         "# visualizando a ordem numérica das classes nos dados de treinamento\n",
         "train_generator.class_indices"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +355,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -375,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tp0U2-Ut5Xvq",
-        "outputId": "17aba0e7-e127-40ca-aeb3-40121c07090e"
+        "outputId": "3c5387cc-0b25-47e7-9221-8cbdb77144e5"
       },
       "source": [
         "# baixando os pesos treinados da rede inception\n",
@@ -383,21 +383,21 @@
         "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
         "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
       ],
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-04-14 14:41:45--  https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.20.128, 74.125.142.128, 74.125.195.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.20.128|:443... connected.\n",
+            "--2021-04-14 22:49:43--  https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.119.128, 108.177.126.128, 108.177.127.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.119.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 87910968 (84M) [application/x-hdf]\n",
             "Saving to: ‘/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5’\n",
             "\n",
-            "/tmp/inception_v3_w 100%[===================>]  83.84M   103MB/s    in 0.8s    \n",
+            "/tmp/inception_v3_w 100%[===================>]  83.84M  70.6MB/s    in 1.2s    \n",
             "\n",
-            "2021-04-14 14:41:46 (103 MB/s) - ‘/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5’ saved [87910968/87910968]\n",
+            "2021-04-14 22:49:44 (70.6 MB/s) - ‘/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5’ saved [87910968/87910968]\n",
             "\n"
           ],
           "name": "stdout"
@@ -436,7 +436,7 @@
         "last_layer = pre_trained_model.get_layer('mixed7')\n",
         "last_output = last_layer.output"
       ],
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
         "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.001), loss = 'categorical_crossentropy', \n",
         "              metrics = ['acc']) "
       ],
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -477,7 +477,7 @@
         "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -658,7 +658,7 @@
         "# carregando os pesos treinados com o modelo\n",
         "model.load_weights('/content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.1.hdf5')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +684,7 @@
         "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
         "                              use_multiprocessing = True, workers = 8)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,10 +758,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5oVfjGOWhcvx",
-        "outputId": "5fd91aec-6976-4d28-d2b7-639e591cd263",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5fd91aec-6976-4d28-d2b7-639e591cd263"
       },
       "source": [
         "# definindo o caminho pelo qual os pesos serão armazenados \n",
@@ -777,7 +777,7 @@
         "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
         "                              use_multiprocessing = True, workers = 8)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,16 +851,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "tOSw-5jwurg_",
-        "outputId": "a680df3e-d4d9-4480-b241-3f51e03cf7ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a680df3e-d4d9-4480-b241-3f51e03cf7ac"
       },
       "source": [
         "# salvando o modelo treinado\n",
         "model.save('/content/drive/MyDrive/weights-nih/inception/model_binv1.2')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -875,15 +875,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "OB81BDRxus6M",
-        "outputId": "5b1142c7-0b17-44ef-b2ce-cd8d8d132130",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b1142c7-0b17-44ef-b2ce-cd8d8d132130"
       },
       "source": [
+        "# testando a capacidade de predição do modelo com os dados de teste\n",
         "model.evaluate(test_generator)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,6 +904,144 @@
             "tags": []
           },
           "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DiqWm8B2gQyf"
+      },
+      "source": [
+        "### Continuação da etapa de treinamento"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bq7puxKUgKLQ"
+      },
+      "source": [
+        "# carregando os pesos previamente treinados\n",
+        "model.load_weights('/content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.2.hdf5')"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O8ufmRHPgYUd",
+        "outputId": "dc509ad9-6705-4773-efae-ac91e6ca62b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# definindo o caminho pelo qual os pesos serão armazenados \n",
+        "filepath = \"/content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.3.hdf5\"\n",
+        "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+        "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')\n",
+        "# definindo um array de callbacks\n",
+        "callbacks = [checkpoint]\n",
+        "\n",
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 53263 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 8)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.4354 - acc: 0.7957 WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 5856s 28s/step - loss: 0.4353 - acc: 0.7957 - val_loss: 0.8334 - val_acc: 0.6366\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.63660, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.3.hdf5\n",
+            "Epoch 2/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3980 - acc: 0.8113 WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 2721s 13s/step - loss: 0.3980 - acc: 0.8113 - val_loss: 0.8280 - val_acc: 0.6480\n",
+            "\n",
+            "Epoch 00002: val_acc improved from 0.63660 to 0.64796, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.3.hdf5\n",
+            "Epoch 3/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3886 - acc: 0.8174WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 2014s 10s/step - loss: 0.3886 - acc: 0.8174 - val_loss: 0.9707 - val_acc: 0.6354\n",
+            "\n",
+            "Epoch 00003: val_acc did not improve from 0.64796\n",
+            "Epoch 4/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3840 - acc: 0.8200WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 741s 3s/step - loss: 0.3840 - acc: 0.8200 - val_loss: 0.9529 - val_acc: 0.6070\n",
+            "\n",
+            "Epoch 00004: val_acc did not improve from 0.64796\n",
+            "Epoch 5/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3930 - acc: 0.8120WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 717s 3s/step - loss: 0.3930 - acc: 0.8120 - val_loss: 0.8481 - val_acc: 0.6487\n",
+            "\n",
+            "Epoch 00005: val_acc improved from 0.64796 to 0.64867, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.3.hdf5\n",
+            "Epoch 6/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3816 - acc: 0.8210WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 2044s 10s/step - loss: 0.3816 - acc: 0.8210 - val_loss: 0.8538 - val_acc: 0.6373\n",
+            "\n",
+            "Epoch 00006: val_acc did not improve from 0.64867\n",
+            "Epoch 7/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3757 - acc: 0.8241WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 802s 4s/step - loss: 0.3757 - acc: 0.8241 - val_loss: 0.8361 - val_acc: 0.6624\n",
+            "\n",
+            "Epoch 00007: val_acc improved from 0.64867 to 0.66241, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_bin_v1.3.hdf5\n",
+            "Epoch 8/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3708 - acc: 0.8266WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 2247s 11s/step - loss: 0.3708 - acc: 0.8266 - val_loss: 0.8282 - val_acc: 0.6428\n",
+            "\n",
+            "Epoch 00008: val_acc did not improve from 0.66241\n",
+            "Epoch 9/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3625 - acc: 0.8302WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 777s 4s/step - loss: 0.3626 - acc: 0.8302 - val_loss: 1.2351 - val_acc: 0.5760\n",
+            "\n",
+            "Epoch 00009: val_acc did not improve from 0.66241\n",
+            "Epoch 10/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - ETA: 0s - loss: 0.3634 - acc: 0.8316WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "208/208 [==============================] - 744s 3s/step - loss: 0.3634 - acc: 0.8316 - val_loss: 1.0270 - val_acc: 0.6120\n",
+            "\n",
+            "Epoch 00010: val_acc did not improve from 0.66241\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-qjxJ8jms8LC",
+        "outputId": "fe8493d1-a5e9-4f61-fe8d-6103ad741773",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# salvando o modelo treinado\n",
+        "model.save('/content/drive/MyDrive/weights-nih/inception/model_binv1.3')"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: /content/drive/MyDrive/weights-nih/inception/model_binv1.3/assets\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
