--- a/4-experiments/experiment7/inception/experiment7-dataset4-parte1.ipynb
+++ b/4-experiments/experiment7/inception/experiment7-dataset4-parte1.ipynb
@@ -914,11 +914,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h42jjoyHY-61",
-        "outputId": "eca16cfe-15f0-42a5-beb6-c13815bc4682",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h42jjoyHY-61",
+        "outputId": "eca16cfe-15f0-42a5-beb6-c13815bc4682"
       },
       "source": [
         "# testando a capacidade de generalização do modelo\n",
@@ -993,6 +993,168 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "DqjrfvXFaNgH",
+        "outputId": "18292af4-2c0b-441a-f3cc-9121166bcd6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "predict[1]"
+      ],
+      "id": "DqjrfvXFaNgH",
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3.9517616e-09, 5.5634570e-07, 1.4792023e-09, 5.3228341e-08,\n",
+              "       1.5899953e-08, 3.7546246e-07, 9.9999762e-01, 2.9927514e-07,\n",
+              "       2.8800528e-07, 2.2423309e-07, 3.1322825e-10, 5.9129633e-07],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 121
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w56rK5yzaidg"
+      },
+      "source": [
+        ""
+      ],
+      "id": "w56rK5yzaidg",
+      "execution_count": 163,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ojGyKsW_by6U",
+        "outputId": "6a2da1a9-ea7e-4afa-e372-952bd2f016a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i in predict:\n",
+        "  print(i)\n",
+        "  break"
+      ],
+      "id": "ojGyKsW_by6U",
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[9.39787202e-13 1.74611159e-09 1.46677944e-13 1.00665844e-10\n",
+            " 2.30453417e-12 2.70394429e-10 1.00000000e+00 2.59396254e-10\n",
+            " 1.32305583e-10 9.27568231e-11 2.04438314e-14 3.79589499e-10]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SKrkv_WoajpJ",
+        "outputId": "e65b7b72-6030-4a0d-ba97-29ef821580c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = thresholds(0.5,predict)\n",
+        "a[0]"
+      ],
+      "id": "SKrkv_WoajpJ",
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gYGlLFgGddvp",
+        "outputId": "1d381293-84ae-433e-ac50-a9129ce30aea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = np.array(a)\n",
+        "a = a.reshape((1327, 12))\n",
+        "a.shape"
+      ],
+      "id": "gYGlLFgGddvp",
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1327, 12)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2FWqcM9Lgh9l",
+        "outputId": "d230ab95-8ebb-4a63-c4a7-2375cc82b6ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y[0]"
+      ],
+      "id": "2FWqcM9Lgh9l",
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5xvDNlj637Q8"
       },
       "source": [
@@ -1001,14 +1163,18 @@
         "def thresholds(limiar, predict):\n",
         "  '''predição para diferentes thresholds'''\n",
         "\n",
-        "  predict_ = []\n",
-        "  for i in predict:\n",
-        "    if i > limiar:\n",
-        "      predict_.append(1)\n",
-        "    else:\n",
-        "      predict_.append(0)\n",
+        "  aux = list()\n",
+        "  for value in predict:\n",
+        "    for i in range(0, len(value)):\n",
+        "      if value[i] > limiar:\n",
+        "        aux.append(1)\n",
+        "      else:\n",
+        "        aux.append(0)\n",
         "  \n",
-        "  return predict_\n",
+        "  aux = np.array(aux)\n",
+        "  aux = aux.reshape((len(predict), len(predict[0]))).astype('float32')\n",
+        "  \n",
+        "  return aux\n",
         "\n",
         "def precision_recall_accuracy_curve(predict, y):\n",
         "  ''' Relaciona a curva da Precisão, Sensibilidade e Acurácia em relação a diferentes Thresholds'''\n",
@@ -1046,7 +1212,8 @@
         "  '''Melhores valores para o threshold escolhido'''\n",
         "\n",
         "  predict_ = thresholds(threshold, predict)\n",
-        "  print('Matriz de Confusão:\\n', confusion_matrix(predict_, y))\n",
+        "  print('Matriz de Confusão:\\n', confusion_matrix(np.ndarray.tolist(predict_.astype('int')),\n",
+        "                                                  np.ndarray.tolist(y.astype('int')), labels = ))\n",
         "  print('Acurácia:', accuracy_score(predict_, y))\n",
         "  print('Precisão', precision_score(predict_, y))\n",
         "  print('Sensibilidade:', recall_score(predict_, y)) \n",
@@ -1055,8 +1222,50 @@
         "  return None"
       ],
       "id": "5xvDNlj637Q8",
-      "execution_count": null,
+      "execution_count": 182,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g4Snx8znibvf",
+        "outputId": "71bcd135-2a67-452e-d470-af620796322f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_generator.class_indices\n",
+        "labels = ['Atelectasis', 'Calcification', 'Consolidation', 'ILD', 'Infiltration', 'Lung Opacity',\n",
+        "          ]"
+      ],
+      "id": "g4Snx8znibvf",
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Atelectasis': 0,\n",
+              " 'Calcification': 1,\n",
+              " 'Consolidation': 2,\n",
+              " 'ILD': 3,\n",
+              " 'Infiltration': 4,\n",
+              " 'Lung Opacity': 5,\n",
+              " 'No finding': 6,\n",
+              " 'Nodule/Mass': 7,\n",
+              " 'Pleural effusion': 8,\n",
+              " 'Pleural thickening': 9,\n",
+              " 'Pneumothorax': 10,\n",
+              " 'Pulmonary fibrosis': 11}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 192
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1091,29 +1300,30 @@
       "metadata": {
         "id": "s0RmqbxK4Ntl",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 341
         },
-        "outputId": "dccef863-f708-42ae-ebea-1fb89c24077b"
+        "outputId": "1de431f6-3ced-41da-fca1-e4426cab3f09"
       },
       "source": [
         "# analisando as melhores métricas encontradas para o modelo\n",
-        "best_metrics(threshold = 0.60, predict = predict[:,0], y = y[:,0])"
+        "best_metrics(threshold = 0.60, predict = predict, y = y)"
       ],
       "id": "s0RmqbxK4Ntl",
-      "execution_count": 39,
+      "execution_count": 183,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Matriz de Confusão:\n",
-            " [[583  42]\n",
-            " [ 75 627]]\n",
-            "Acurácia: 0.9118311981914092\n",
-            "Precisão 0.9372197309417041\n",
-            "Sensibilidade: 0.8931623931623932\n",
-            "F1_Score: 0.9146608315098469\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-183-c267c4f89891>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# analisando as melhores métricas encontradas para o modelo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbest_metrics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthreshold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.60\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-182-d12c39f6c809>\u001b[0m in \u001b[0;36mbest_metrics\u001b[0;34m(threshold, predict, y)\u001b[0m\n\u001b[1;32m     54\u001b[0m   \u001b[0mpredict_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthresholds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m   print('Matriz de Confusão:\\n', confusion_matrix(np.ndarray.tolist(predict_.astype('int')),\n\u001b[0;32m---> 56\u001b[0;31m                                                   np.ndarray.tolist(y.astype('int'))))\n\u001b[0m\u001b[1;32m     57\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Acurácia:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredict_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Precisão'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprecision_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredict_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mconfusion_matrix\u001b[0;34m(y_true, y_pred, labels, sample_weight, normalize)\u001b[0m\n\u001b[1;32m    268\u001b[0m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    269\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 270\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s is not supported\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    271\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    272\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: multilabel-indicator is not supported"
+          ]
         }
       ]
     },
