atualizando ordem dos experimentos

--- a/3-models/v2.0/2-densenet.ipynb
+++ b/3-models/v2.0/2-densenet.ipynb
@@ -73,7 +73,7 @@
     "x = GlobalAveragePooling2D()(x)\n",
     "\n",
     "# adicionando a camada de saída da rede \n",
-    "predictions = Dense(units = 1, activation = 'sigmoid')(x)\n",
+    "predictions = Dense(units = 2, activation = 'softmax')(x)\n",
     "\n",
     "# concatenando a rede importada com a rede definida (ajuste fino)\n",
     "model = Model(inputs=base_model.input, outputs=predictions)"
@@ -103,7 +103,7 @@
    "source": [
     "# compilando os parâmetros da rede\n",
     "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001),\n",
-    "              loss = 'binary_crossentropy', metrics = ['acc'])"
+    "              loss = 'categorical_crossentropy', metrics = ['acc'])"
    ]
   },
   {
