--- a/1-datasets-info/4-nih-dataset.ipynb
+++ b/1-datasets-info/4-nih-dataset.ipynb
@@ -20,6 +20,108 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84b79748-3dc0-4d0d-9176-7a45ccefc77e",
+   "metadata": {},
+   "source": [
+    "### Baixando os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3afa1543-10ff-4308-ba3f-4ae66c744cee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading../0-datasets/nih/images_01.tar.gz...\n",
+      "downloading../0-datasets/nih/images_02.tar.gz...\n",
+      "downloading../0-datasets/nih/images_03.tar.gz...\n",
+      "downloading../0-datasets/nih/images_04.tar.gz...\n",
+      "downloading../0-datasets/nih/images_05.tar.gz...\n",
+      "downloading../0-datasets/nih/images_06.tar.gz...\n",
+      "downloading../0-datasets/nih/images_07.tar.gz...\n",
+      "downloading../0-datasets/nih/images_08.tar.gz...\n",
+      "downloading../0-datasets/nih/images_09.tar.gz...\n",
+      "downloading../0-datasets/nih/images_10.tar.gz...\n",
+      "downloading../0-datasets/nih/images_11.tar.gz...\n",
+      "downloading../0-datasets/nih/images_12.tar.gz...\n",
+      "Download complete. Please check the checksums\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request as url\n",
+    "\n",
+    "links = [\n",
+    "    'https://nihcc.box.com/shared/static/vfk49d74nhbxq3nqjg0900w5nvkorp5c.gz',\n",
+    "    'https://nihcc.box.com/shared/static/i28rlmbvmfjbl8p2n3ril0pptcmcu9d1.gz',\n",
+    "    'https://nihcc.box.com/shared/static/f1t00wrtdk94satdfb9olcolqx20z2jp.gz',\n",
+    "    'https://nihcc.box.com/shared/static/0aowwzs5lhjrceb3qp67ahp0rd1l1etg.gz',\n",
+    "    'https://nihcc.box.com/shared/static/v5e3goj22zr6h8tzualxfsqlqaygfbsn.gz',\n",
+    "    'https://nihcc.box.com/shared/static/asi7ikud9jwnkrnkj99jnpfkjdes7l6l.gz',\n",
+    "    'https://nihcc.box.com/shared/static/jn1b4mw4n6lnh74ovmcjb8y48h8xj07n.gz',\n",
+    "    'https://nihcc.box.com/shared/static/tvpxmn7qyrgl0w8wfh9kqfjskv6nmm1j.gz',\n",
+    "    'https://nihcc.box.com/shared/static/upyy3ml7qdumlgk2rfcvlb9k6gvqq2pj.gz',\n",
+    "    'https://nihcc.box.com/shared/static/l6nilvfa9cg3s28tqv1qc1olm3gnz54p.gz',\n",
+    "    'https://nihcc.box.com/shared/static/hhq8fkdgvcari67vfhs7ppg2w6ni4jze.gz',\n",
+    "    'https://nihcc.box.com/shared/static/ioqwiy20ihqwyr8pf4c24eazhh281pbu.gz']\n",
+    "\n",
+    "for idx, link in enumerate(links):\n",
+    "    fn = '../0-datasets/nih/images_%02d.tar.gz' % (idx+1)\n",
+    "    print('downloading'+fn+'...')\n",
+    "    url.urlretrieve(link, fn)  \n",
+    "\n",
+    "print(\"Download complete. Please check the checksums\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5dafcf5-6a6e-42ef-a39e-7a19c37c9995",
+   "metadata": {},
+   "source": [
+    "### Descompactando os arquivos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f4f7964e-6c31-4c7a-9231-b862255ba31d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tarfile\n",
+    "\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_01.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file01/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_02.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file01/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_03.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file01/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_04.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file01/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_05.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file02/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_06.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file02/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_07.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file02/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_08.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file02/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_09.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file03/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_10.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file03/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_11.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file03/')\n",
+    "t = tarfile.open(\"../0-datasets/nih/images_12.tar.gz\")\n",
+    "t.extractall('../0-datasets/nih/arquivos-descompactados/file03/')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "unlikely-subject",
    "metadata": {},
    "source": [
