Criado através do Colaboratory

--- a/4-experiments/multilabel-normal.ipynb
+++ b/4-experiments/multilabel-normal.ipynb
@@ -442,11 +442,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BUGdPMp1MnFy",
-        "outputId": "2da48ab1-f1fc-4c2b-f714-af2f92c1bc4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BUGdPMp1MnFy",
+        "outputId": "2da48ab1-f1fc-4c2b-f714-af2f92c1bc4c"
       },
       "source": [
         "# visualizando a quantidade de exemplos disponíveis nos dados de treinamento\n",
@@ -483,11 +483,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "15lrj6xgM2by",
-        "outputId": "4e161174-b057-4380-989d-c4dead7be9df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "15lrj6xgM2by",
+        "outputId": "4e161174-b057-4380-989d-c4dead7be9df"
       },
       "source": [
         "# visualizando a quantidade de exemplos disponíveis nos dados de validação\n",
@@ -524,11 +524,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Tmr4M8tgM630",
-        "outputId": "58b721bf-5a40-41ee-953d-1e27d74792ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Tmr4M8tgM630",
+        "outputId": "58b721bf-5a40-41ee-953d-1e27d74792ea"
       },
       "source": [
         "# visualizando a quantidade de exemplos disponíveis nos dados de teste\n",
@@ -639,11 +639,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pe4WsyWLWlqo",
-        "outputId": "dd6088ec-e8b2-4ad1-a142-e58fb882762d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pe4WsyWLWlqo",
+        "outputId": "dd6088ec-e8b2-4ad1-a142-e58fb882762d"
       },
       "source": [
         "model = MobileNetV2(input_shape = (512, 512, 3), include_top = False, weights = 'imagenet', \n",
@@ -761,11 +761,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ECumd3GBX7wC",
-        "outputId": "ec088fc7-b431-484a-ac36-42a28a6793d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ECumd3GBX7wC",
+        "outputId": "ec088fc7-b431-484a-ac36-42a28a6793d6"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -780,145 +780,11 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            " 18/132 [===>..........................] - ETA: 1:32:17 - loss: 0.6371 - acc: 0.6454"
+            " 79/132 [================>.............] - ETA: 44:00 - loss: 0.4822 - acc: 0.7576"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "compatible-fetish"
-      },
-      "source": [
-        "### Preparando a rede neural convolucional"
-      ],
-      "id": "compatible-fetish"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "anonymous-rotation"
-      },
-      "source": [
-        "# baixando os pesos treinados da rede inception\n",
-        "!wget --no-check-certificate \\\n",
-        "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
-        "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
-      ],
-      "id": "anonymous-rotation",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "compact-knife"
-      },
-      "source": [
-        "# referenciando o local em que os pesos estão armazenados\n",
-        "local_weights_file = '/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
-        "\n",
-        "# carregando a arquitetura inception pré-treinada\n",
-        "pre_trained_model = InceptionV3(input_shape = (512, 512, 3), \n",
-        "                                include_top = False, \n",
-        "                                weights = None)\n",
-        "\n",
-        "# carregando os pesos treinados com outros dados \n",
-        "pre_trained_model.load_weights(local_weights_file)\n",
-        "\n",
-        "# definindo as flags iniciais  \n",
-        "pre_trained_model.trainable = True\n",
-        "set_trainable = False\n",
-        "\n",
-        "# para a arquitetura inception, a rede será retreinada a partir da camada 'mixed8'\n",
-        "for layer in pre_trained_model.layers:\n",
-        "    if layer.name == 'mixed8':\n",
-        "        set_trainable = True\n",
-        "    if set_trainable:\n",
-        "        layer.trainable = True\n",
-        "    else:\n",
-        "        layer.trainable = False\n",
-        "\n",
-        "# obtendo a última camada como sendo a nomeada por 'mixed7'\n",
-        "last_layer = pre_trained_model.get_layer('mixed7')\n",
-        "last_output = last_layer.output"
-      ],
-      "id": "compact-knife",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "double-sound"
-      },
-      "source": [
-        "# definindo uma camada de achatamento\n",
-        "x = layers.Flatten()(last_output)\n",
-        "# conecatando a rede uma camada com 1024 neurônios e função de ativação relu\n",
-        "x = layers.Dense(units = 1024, activation = 'relu')(x)     \n",
-        "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
-        "x = layers.Dense(units = 512, activation = 'relu')(x) \n",
-        "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
-        "x = layers.Dropout(rate = 0.2)(x)                  \n",
-        "# adicionando uma camada de saída com um neurônio e uma função de ativação sigmoide\n",
-        "x = layers.Dense  (units = 2, activation = 'softmax')(x)           \n",
-        "\n",
-        "# conecatando as camadas definidas acima com a arquitetura inception\n",
-        "model = Model(pre_trained_model.input, x) \n",
-        "\n",
-        "# compilando a rede \n",
-        "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'categorical_crossentropy', \n",
-        "              metrics = ['acc'])"
-      ],
-      "id": "double-sound",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "found-baker"
-      },
-      "source": [
-        "# definindo o caminho pelo qual os pesos serão armazenados \n",
-        "filepath = \"transferlearning_weights.hdf5\"\n",
-        "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
-        "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
-      ],
-      "id": "found-baker",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "forward-guide"
-      },
-      "source": [
-        "# definindo um array de callbacks\n",
-        "callbacks = [checkpoint]"
-      ],
-      "id": "forward-guide",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vital-constitutional"
-      },
-      "source": [
-        "# treinando a rede neural convolucional\n",
-        "history = model.fit_generator(train_generator, steps_per_epoch = 4242 // 32, \n",
-        "                              validation_data = valid_generator, validation_steps = 1061 // 32,\n",
-        "                              callbacks = callbacks, epochs = 10)"
-      ],
-      "id": "vital-constitutional",
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
