Criado através do Colaboratory

--- a/4-experiments/multilabel-pleura.ipynb
+++ b/4-experiments/multilabel-pleura.ipynb
@@ -620,11 +620,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XEybnwZ7xNYB",
-        "outputId": "663934c1-af6b-475c-a923-4faab0996ed8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XEybnwZ7xNYB",
+        "outputId": "663934c1-af6b-475c-a923-4faab0996ed8"
       },
       "source": [
         "# visualizando os atributos numéricos nos dados de treinamento\n",
@@ -722,54 +722,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wd512vsWbQCx"
-      },
-      "source": [
-        "for indices in range(0,10):\n",
-        "  (x1, y1) = train_generator[indices]\n",
-        "  if indices == 0:\n",
-        "    x, y = x1, y1\n",
-        "  x, y = np.concatenate([x, x1]), np.concatenate([y, y1])"
-      ],
-      "id": "Wd512vsWbQCx",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fEkzFqnZbeI8"
-      },
-      "source": [
-        "for indices in range(0,5):\n",
-        "  (z1, w1) = valid_generator[indices]\n",
-        "  if indices == 0:\n",
-        "    z, w = z1, w1\n",
-        "  z, w = np.concatenate([z, z1]), np.concatenate([w, w1])"
-      ],
-      "id": "fEkzFqnZbeI8",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QnSLlHzNbUsh"
-      },
-      "source": [
-        "for indices in range(0,5):\n",
-        "  (a1, b1) = test_generator[indices]\n",
-        "  if indices == 0:\n",
-        "    a, b = a1, b1\n",
-        "  a, b = np.concatenate([a, a1]), np.concatenate([b, b1])"
-      ],
-      "id": "QnSLlHzNbUsh",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "INOBVe1vYR-n"
       },
       "source": [
@@ -803,7 +755,11 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            " 6/85 [=>............................] - ETA: 50:56 - loss: 0.5597 - acc: 0.7635"
+            "85/85 [==============================] - 4142s 48s/step - loss: 0.5486 - acc: 0.7805 - val_loss: 0.5524 - val_acc: 0.7857\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.78571, saving model to transferlearning_weights.hdf5\n",
+            "Epoch 2/10\n",
+            "60/85 [====================>.........] - ETA: 11:23 - loss: 0.5226 - acc: 0.7775"
           ],
           "name": "stdout"
         }
