Criado através do Colaboratory

--- a/4-experiments/multilabel-opacity.ipynb
+++ b/4-experiments/multilabel-opacity.ipynb
@@ -366,11 +366,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "00eyZFrcgKh0",
-        "outputId": "2dd37a6f-09d6-4aa2-aa30-9fd9375b7c6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "00eyZFrcgKh0",
+        "outputId": "2dd37a6f-09d6-4aa2-aa30-9fd9375b7c6b"
       },
       "source": [
         "full_data['class_name'].value_counts()"
@@ -776,7 +776,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ECumd3GBX7wC"
+        "id": "ECumd3GBX7wC",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "37e140bb-e1cf-4ca7-85da-0a4862936f57"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -785,8 +790,20 @@
         "                              callbacks = callbacks, epochs = 3)"
       ],
       "id": "ECumd3GBX7wC",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-8f117238cf7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# treinando a rede neural convolucional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m history = model.fit_generator(train_generator, steps_per_epoch = 1356 // 32, \n\u001b[0m\u001b[1;32m      3\u001b[0m                               \u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalid_generator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m339\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                               callbacks = callbacks, epochs = 3)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
